--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -35,6 +35,13 @@ html.dark {
     background-color: theme('colors.slate.400');
   }
 }
+.container {
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: 1.25rem;
+  padding-left: 1.25rem;
+}
 
 
 // components
