--- a/assets/scss/page/home.scss
+++ b/assets/scss/page/home.scss
@@ -1,6 +1,6 @@
 .profile-input {
   background: var(--base-color-dark-transparent, rgba(47, 50, 65, 0.5));
-  @apply w-[50%] h-[48px] p-[20px] pr-[8rem] rounded-lg;
+  @apply h-[48px] p-[20px] pr-[8rem] rounded-lg;
 }
 .wallet-card {
   background: var(--base-color-dark-transparent, rgba(47, 50, 65, 0.5));
