--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -5,40 +5,42 @@
 // components
 // component::scrollbar
 // components
-::-webkit-scrollbar {
-    width: 16px;
-}
+// ::-webkit-scrollbar {
+//     width: 16px;
+// }
 
-::-webkit-scrollbar-track {
-    background: theme('colors.gray.100');
-    border-left: 1px solid theme('colors.gray.200');
-}
+// ::-webkit-scrollbar-track {
+//     background: theme('colors.gray.100');
+//     border-left: 1px solid theme('colors.gray.200');
+// }
 
-::-webkit-scrollbar-thumb {
-    border: 4px solid theme('colors.gray.100');
-    background-clip: padding-box;
-    border-radius: 9999px;
-    background-color: theme('colors.slate.300');
-}
+// ::-webkit-scrollbar-thumb {
+//     border: 4px solid theme('colors.gray.100');
+//     background-clip: padding-box;
+//     border-radius: 9999px;
+//     background-color: theme('colors.slate.300');
+// }
 
-::-webkit-scrollbar-thumb:hover {
-    background-color: theme('colors.slate.400');
-}
+// ::-webkit-scrollbar-thumb:hover {
+//     background-color: theme('colors.slate.400');
+// }
 
-html.dark {
-     ::-webkit-scrollbar-track {
-        background: theme('colors.slate.800');
-        border-left: 1px solid theme('colors.slate.700');
-    }
-     ::-webkit-scrollbar-thumb {
-        border-color: theme('colors.slate.800');
-        background-color: theme('colors.slate.500');
-    }
-     ::-webkit-scrollbar-thumb:hover {
-        background-color: theme('colors.slate.400');
-    }
+// html.dark {
+//      ::-webkit-scrollbar-track {
+//         background: theme('colors.slate.800');
+//         border-left: 1px solid theme('colors.slate.700');
+//     }
+//      ::-webkit-scrollbar-thumb {
+//         border-color: theme('colors.slate.800');
+//         background-color: theme('colors.slate.500');
+//     }
+//      ::-webkit-scrollbar-thumb:hover {
+//         background-color: theme('colors.slate.400');
+//     }
+// }
+html {
+    scroll-behavior: smooth;
 }
-
 .container {
     width: 100%;
     margin-right: auto;
